Fix z-index of sidenav

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -60,7 +60,7 @@ p {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     top: 0;
     right: 0;
     background-color: white;
@@ -97,7 +97,7 @@ p {
   height: 48px;
   right: 25;
   margin: 20px;
-
+  z-index: 999;
   background: white;
   border: 4px solid #333;
   span {
